very minor opt, 2.0.0.5 release